--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -174,7 +174,7 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit;
+        margin-bottom: 0;
     }
 }
 
@@ -185,7 +185,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 
