added comments header

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@ layout: default
   {%endif%}
   </div>
   <!-- START: Livefyre Embed -->
+  <h2>Comments</h2>
 <div id="livefyre-comments"></div>
 <script type="text/javascript" src="http://zor.livefyre.com/wjs/v3.0/javascripts/livefyre.js"></script>
 <script type="text/javascript">
