--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -5,12 +5,19 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    <h3>Last Updated: {{page.date | date: "%-d %B %Y" }}</h3>
   </header>
 
   <article class="post-content">
     {{ content }}
   </article>
   <!-- START: Livefyre Embed -->
+  
+
+
+
+
+
   <h2>Comments</h2>
 <div id="livefyre-comments"></div>
 <script type="text/javascript" src="http://zor.livefyre.com/wjs/v3.0/javascripts/livefyre.js"></script>
