--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -220,7 +220,16 @@ pre {
 }
 
 .medPic{
-  height:200px; 
+  height:200px;
   border-radius: 25px;
   padding:5px;
+}
+
+.postTableRow{
+    vertical-align: middle;
+    padding-right: 20px;
+}
+.postTableDate{
+    @extend .postTableRow;
+    white-space:nowrap;
 }
