--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -219,6 +219,24 @@ pre {
     right: 0;
 }
 
+.wideMediaBox{
+    position: relative;
+    width: 100%;     /* desired width */
+}
+.wideMediaBox:before{
+    content: "";
+    display: block;
+    padding-top: 56.25%;  /* initial ratio of 1:1*/
+}
+
+.mediaContent{
+    position:  absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
 .medPic{
   height:200px;
   border-radius: 25px;
