--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -229,6 +229,17 @@ pre {
     padding-top: 56.25%;  /* initial ratio of 1:1*/
 }
 
+.widePP{
+    position: relative;
+    width: 100%;     /* desired width */
+}
+.widePP:before{
+    content: "";
+    display: block;
+    padding-top: 60%;  /* if no calc block support*/
+    padding-top: calc(56.25% + 24px); /* account for the little button bar */
+}
+
 .mediaContent{
     position:  absolute;
     top: 0;
