--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
   {%endif%}
 
   {% if page.imageDir %}
-  {{ page.imageDir | insertPicFolder:'medPic'}}
+  {{ page.imageDir | insertPicFolder:'medPic','html'}}
   {%endif%}
 
 
