--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
+  {% include googleAnalytics.html %}
+
 </head>
