--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -284,3 +284,21 @@ pre {
     @extend .postTableRow;
     white-space:nowrap;
 }
+
+table{
+    border-collapse: collapse;
+    border-spacing: 3;
+    border:4px solid #000000;
+}
+
+td, th{
+    border:2px solid #000000;
+    padding:2px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+th{
+    border-bottom: 4px solid #000000;
+    text-align: center;
+}
