--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -250,6 +250,18 @@ pre {
     padding-top: 75%/* account for the little button bar */
 }
 
+.nineSixBox{
+    position: relative;
+    width: 50%;     /* desired width */
+    text-align: center;
+    display:block;
+}
+.nineSixBox:before{
+    content: "";
+    display: block;
+    padding-top: 177.7777777777778%/* account for the little button bar */
+}
+
 .mediaContent{
     position:  absolute;
     top: 0;
@@ -288,14 +300,18 @@ pre {
 table{
     border-collapse: collapse;
     border-spacing: 3;
-    border:4px solid #000000;
+    // border:4px solid #000000;
 }
 
 td, th{
-    border:2px solid #000000;
+    // border:2px solid #000000;
     padding:2px;
     padding-left: 5px;
     padding-right: 5px;
+    border-style: hidden;
+}
+tr{
+        border-bottom: 1px dotted rgb(68, 74, 115);
 }
 
 th{
