--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -318,3 +318,102 @@ th{
     border-bottom: 4px solid #000000;
     text-align: center;
 }
+
+.filter-type {
+}
+
+.sidebarlistscroll {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 15px;
+    overflow-y: none;
+    border: none;
+    visibility: hidden;
+}
+#filter{display:none}
+#filter:checked + .sidebarlistscroll{
+    visibility: visible;
+}
+
+.wrap {
+  width: 500px;
+  padding: 10px 20px;
+
+}
+
+li.tag {
+  display: inline-block;
+  width:auto;
+  height: auto;
+  background: rgb(156, 205, 215);
+  list-style: none;
+  -moz-border-radius:   7px;
+  -webkit-border-radius:7px;
+  border-radius:        7px;
+  font-size: 14pt;
+  color: rgb(255, 255, 255);
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 2px;
+  padding-top: 2px;
+  margin: 1px;
+}
+li.tag:hover{
+    background: rgb(43, 159, 128)
+}
+
+ul.tag {
+  background: rgba(106, 121, 134, 0.1);
+  margin: 4px; padding: 10px;
+  -moz-border-radius:   30px;
+  -webkit-border-radius:30px;
+  border-radius:        30px;
+}
+
+a.tag{
+    color: rgb(45, 10, 85)
+}
+
+a.tag:hover{text-decoration: none}
+
+.toggle-box {
+  display: none;
+}
+
+.toggle-box + label {
+  cursor: pointer;
+  display: block;
+  font-weight: bold;
+  line-height: 21px;
+  margin-bottom: 5px;
+}
+
+.toggle-box + label + div {
+  display: none;
+  margin-bottom: 10px;
+}
+
+.toggle-box:checked + label + div {
+  display: block;
+}
+
+.toggle-box + label:before {
+  background-color: #4F5150;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  color: #FFFFFF;
+  content: "+";
+  display: block;
+  float: left;
+  font-weight: bold;
+  height: 20px;
+  line-height: 20px;
+  margin-right: 5px;
+  text-align: center;
+  width: 20px;
+}
+
+.toggle-box:checked + label:before {
+  content: "\2212";
+}
