--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -5,7 +5,7 @@
 <ul class="tag">
 {% for tag in {{include.tags}} %}
   {% assign t = tag | first %}
-  <li class="tag"><a href="tags/{{t | uri_escape}}" class = "tag">{{t}}</a></li>
+  <li class="tag"><a href="tags/{{t | uri_escape}}.html" class = "tag">{{t}}</a></li>
 {% endfor %}
 </ul>
 </div>
