--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -6,6 +6,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <h3>Last Updated: {{page.date | date: "%-d %B %Y" }}</h3>
+    {% include pageTags.html tags=page.tags %}
   </header>
 
   <article class="post-content">
@@ -14,6 +15,6 @@ layout: default
   <!-- START: Livefyre Embed -->
 
 {% include comments.html %}
-            
+
 
 </div>
