this isn't working #12

--- a/_includes/pageTags.html
+++ b/_includes/pageTags.html
@@ -1,3 +1,4 @@
+<!-- borrowed from http://www.realcombiz.com/2014/01/how-to-expand-collapse-toggle-div-layer.html -->
 {% if include.tags[0]!='' %}
 <input class="toggle-box" id="header1" type="checkbox" >
 <label for="header1">Tags</label>
