--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,4 +1,5 @@
 {% if include.tags %}
+<!-- borrowed from http://www.realcombiz.com/2014/01/how-to-expand-collapse-toggle-div-layer.html -->
 <input class="toggle-box" id="header1" type="checkbox" >
 <label for="header1">Tags</label>
 <div>
