--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -376,6 +376,7 @@ a.tag{
 
 a.tag:hover{text-decoration: none}
 
+// Borrowed From http://www.realcombiz.com/2014/01/how-to-expand-collapse-toggle-div-layer.html
 .toggle-box {
   display: none;
 }
