--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <h3>Last Updated: {{page.date | date: "%-d %B %Y" }}</h3>
+    <h3>Last Updated: {{page.updated | date: "%-d %B %Y" }}</h3>
     {% include pageTags.html tags=page.tags %}
   </header>
 
