--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,5 @@
+@import 'colors';
+
 /**
  * Site header
  */
@@ -5,7 +7,7 @@
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
-
+    background-color: $hfColor;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
@@ -94,6 +96,7 @@
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
+    background-color: $hfColor;
 }
 
 .footer-heading {
@@ -163,6 +166,9 @@
  */
 .page-content {
     padding: $spacing-unit 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    background-color: $masterBackgroundColor;
 }
 
 .page-heading {
@@ -233,4 +239,8 @@
             font-size: 18px;
         }
     }
+}
+
+html{
+    background-color: $hfColor;
 }
