--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -327,9 +327,6 @@ td, th{
     padding-right: 5px;
     border-style: hidden;
 }
-tr{
-        border-bottom: 1px dotted rgb(68, 74, 115);
-}
 
 th{
     border-bottom: 4px solid #000000;
@@ -489,4 +486,9 @@ hr{
     border: 0;
 height: 3px;
 background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
+}
+
+.greyBorder{
+    display: block;
+    border-top: 2px gray dotted
 }
