added calendar landing page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -486,3 +486,7 @@ hr{
 height: 3px;
 background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
 }
+
+.calListItem{
+    font-size: 16pt;
+}
