added magnet looking back post and fixed up headings

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -215,6 +215,10 @@
 
 .post-content {
     margin-bottom: $spacing-unit;
+    h1 {
+        text-decoration: line-through;
+        color: red;
+    }
 
     h2 {
         font-size: 32px;
