--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -108,6 +108,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
+        <a href='{{site.url}}'>{{site.url}}</a>
         <p class="text">{{ site.description }}</p>
       </div>
     </div>
