fixed post display to use full paths (allows flickr support)

--- a/_includes/postsDisp.html
+++ b/_includes/postsDisp.html
@@ -5,7 +5,7 @@
 <div class=postBox>
       <p class=postBoxTitle>{{ post.title }}</p>
     {% if post.thumb %}
-        <img src="/images/{{post.thumb}}" class=postBox>
+        <img src="{{post.thumb}}" class=postBox>
     {% endif %}
     <div class="dateSumBox">
     <hr>
