--- a/_includes/flickr.html
+++ b/_includes/flickr.html
@@ -1,3 +1,15 @@
+{% comment %}
+
+{% include flickr.html 
+    src="https://www.flickr.com/photos/138686863@N06/albums/72157671679417635" 
+    title="first 3d prints" 
+    img="https://c8.staticflickr.com/9/8748/27995772103_0efee1368a_c.jpg" 
+    width=600 
+    height=800 
+    %}
+    
+{% endcomment %}
+
 <style media="screen" type="text/css">
 
 .flBox{{include.ratio|stripNonNum}}{{include.width|stripNonNum}}{
