--- a/_includes/iframe.html
+++ b/_includes/iframe.html
@@ -14,4 +14,9 @@
 
 </style>
 
-<div class='ifBox{{include.ratio|stripNonNum}}{{include.width|stripNonNum}}'> <div class='mediaContent'>    <iframe class='mediaContent' width='100%' height='100%' src={{include.src}} frameborder='0' allowfullscreen></iframe></div> </div>
+<div class='ifBox{{include.ratio|stripNonNum}}{{include.width|stripNonNum}}'> 
+    <div class='mediaContent'>    
+        <iframe class='mediaContent' width='100%' height='100%' src={{include.src}} frameborder='0' allowfullscreen></iframe>
+    </div> 
+</div>
+<br>
