fixed page.desttag in comment

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -11,7 +11,7 @@ layout: default
 
   <article class="post-content">
     <!-- <table>
-        {% for post in {{page.destTag}} %}
+        {% for post in page.destTag %}
       <tr>
         <td class=postTableDate>{{ post.date | date: "%b %-d, %Y" }}</td>
         <td class=postTableRow><a href="/{{post.categories }}">{{post.categories}}</td>
