renamed home style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -495,7 +495,7 @@ background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255
 /**
  * Specials for home page
  */
-.home-page {
+.home {
     p{
         font-size: 26px;
 
