--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -503,3 +503,4 @@ background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255
             font-size: 22px;
         }
     }
+} 
