added a picture to front page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -496,6 +496,9 @@ background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255
  * Specials for home page
  */
 .big-home {
+    width:60%;
+    flex-grow:1;
+    margin: 5px;
     p{
         font-size: 22px;
 
@@ -503,4 +506,19 @@ background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255
             font-size: 18px;
         }
     }
-} 
+}
+
+.home-container {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.headshot-image{
+    width: 35%;
+    height: auto;
+    min-width: 200px;
+    flex-grow: 1;
+    margin: 5px;
+}
