--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,9 @@
       <div class="trigger">
         {% for page in site.pages %}
           {% if page.title %}
+          {% unless page.hide_nav == true %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          {% endunless %}
           {% endif %}
         {% endfor %}
         <a class="page-link" href="https://photos.michaelsobrepera.com/">Photography</a>
