added build time to site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -130,6 +130,7 @@
       <div class="footer-col  footer-col-3">
         <a href='{{site.url}}'>{{site.url}}</a>
         <p class="text">{{ site.description }}</p>
+        <p class="text"><small>Built: {{ site.time | date: "%Y-%m-%d %H:%M UTC" }}</small></p>
       </div>
     </div>
 
